cmake_minimum_required(VERSION 3.5.1)
project(cvm_base)

find_package(catkin REQUIRED COMPONENTS
  roslint
)

set(CMAKE_MODULE_PATH
  ${CMAKE_MODULE_PATH}
  "${CMAKE_SOURCE_DIR}/../../_tools/cmake")
#include(Rubedo)

catkin_package(
  INCLUDE_DIRS
  LIBRARIES
  CATKIN_DEPENDS
)

install(
  FILES env.sh
  DESTINATION ${CATKIN_PACKAGE_ETC_DESTINATION}/../../
  PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE
              GROUP_READ GROUP_EXECUTE
              WORLD_READ WORLD_EXECUTE
)

install(
  FILES setup.bash
  DESTINATION ${CATKIN_PACKAGE_ETC_DESTINATION}/../../
  PERMISSIONS OWNER_READ OWNER_WRITE
              GROUP_READ
              WORLD_READ
)

install(
  FILES setup.sh
  DESTINATION ${CATKIN_PACKAGE_ETC_DESTINATION}/../../
  PERMISSIONS OWNER_READ OWNER_WRITE
              GROUP_READ
              WORLD_READ
)

install(
  FILES setup.zsh
  DESTINATION ${CATKIN_PACKAGE_ETC_DESTINATION}/../../
  PERMISSIONS OWNER_READ OWNER_WRITE
              GROUP_READ
              WORLD_READ
)

install(
  FILES _setup_util.py
  DESTINATION ${CATKIN_PACKAGE_ETC_DESTINATION}/../../
  PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE
              GROUP_READ GROUP_EXECUTE
              WORLD_READ WORLD_EXECUTE
)

install(
  FILES viperdiscovery.py
  DESTINATION ${CATKIN_PACKAGE_ETC_DESTINATION}/../../
  PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE
              GROUP_READ GROUP_EXECUTE
              WORLD_READ WORLD_EXECUTE
)
